platform/sbo/config/sbo-deployment.yaml
### Deployment of spring-boot-observer-server
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-boot-observer-server
  name: spring-boot-observer-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-observer-server
  strategy: {}
  template:
    metadata:
      labels:
        app: spring-boot-observer-server
    spec:
      imagePullSecrets: 
      - name: imagereg-secret
      containers:
      - image: dektregistry.azurecr.io/dekt-system/spring-boot-observer-server:0.0.1
        name: spring-boot-observer-server
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-boot-observer-server
  name: spring-boot-observer-server
spec:
  ports:
  - name: observer-server-http
    port: 5112
    protocol: TCP
    targetPort: 5112
  - name: observer-server-rsocket
    port: 7000
    protocol: TCP
    targetPort: 7000
  selector:
    app: spring-boot-observer-server
  type: NodePort
