platform/sbo/config/sbo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: sbo-ingress
  annotations: 
    kubernetes.io/ingress.class: nginx 
spec: 
  rules: 
    - host: sbo.tanzu.dekt.io
      http: 
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: spring-boot-observer-server
              port:
                number: 5112
